--- a/SimpleNPCs/nbproject/private/private.properties
+++ b/SimpleNPCs/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Airi\\AppData\\Roaming\\.tmcbeans\\dev\\build.properties
+user.properties.file=C:\\Users\\kwpa\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
